[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "numpy>=1.24.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "mage-multi-learn"
dynamic = ["version"]
description = "MAGE : Multi-view Artificial Generation Engine, a non-naïve multiview dataset generator"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    { name = "Dominique Benielli" },
    { name = "Sokol Koço" },
    { name = "Baptiste Bauvin" },
    { name = "Cécile Capponi" }
]
requires-python = ">=3.7"
keywords = ["machine learning", "supervised learning", "classification", "data generation", "multi-view", "multi-modal", "multi-class"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "scikit-learn>=0.19",
    "numpy>=1.24.0",
    "scipy>=1.3.0",
    "plotly",
    "h5py",
    "pyyaml",
    "tabulate",
    "pandas",
    "summit-multi-learn==0.0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
doc = [
    "sphinx>=1.8",
    "numpydoc",
    "sphinx_gallery",
    "matplotlib",
    "jupyter",
    "pandoc",
    "nbsphinx",
    "nbsphinx_link",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "summit-multi-learn"
]
[project.urls]
Documentation = "https://multi-learn.github.io/mage/"
Source = "https://github.com/multi-learn/mage"
Tracker = "https://github.com/multi-learn/mage/issues"

[tool.setuptools.packages.find]
include = ["multiview_generator"]
exclude = ["demo", "docker", "tests"]

[tool.setuptools]
include-package-data = true

[tool.sphinx]
builder = "html"
source-dir = "docs"
build-dir = "docs/build"