[metadata]
license_file = LICENSE.txt

[tool:pytest]
testpaths = multiview_generator
addopts = --cov-report=term-missing
          --cov-report=html
          --cov=multiview_generator
          --verbose
          --doctest-modules

[coverage:run]
branch = True
source = multiview_generator
include = */multiview_generator/base_strs.py
omit = */tests/*
